<resources>
    <string name="app_name">SMARTMART</string>
    <string name="edit">EDIT</string>
    <string name="add">ADD</string>
    <string name="action_settings">CART</string>
    <string name="title_activity_bottom_nav">SMARTMART</string>
    <string name="title_home">SMARTMART</string>
    <string name="title_account">SMARTMART</string>
    <string name="title_receipt">SMARTMART</string>
    <string name="title_scanner">SMARTMART</string>
    <string name="account_name">Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="error_api">Error fetching nearby restaurants.</string>
    <string name="account_email">Email@provider.com</string>
    <string name="account_logout">LOGOUT</string>
    <string name="account_image_description">Profile picture of user</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">SAVE</string>
    <string name="title_cart">CART</string>
    <string name="pay">Continue to pay</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading…</string>
    <string name="ok">OK</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="permission_camera">This app needs camera permission to scan barcode</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="grant">GRANT</string>
    <string name="scanner">Scanner</string>
    <string name="add_items_here">Add items here</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="confirm">Confirm</string>
    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>

</resources>
