<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_scanner">

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.smartmart.scanner.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/activity_login" />

    <fragment
        android:id="@+id/navigation_receipt"
        android:name="com.smartmart.scanner.ui.receipt.ReceiptFragment"
        android:label="@string/title_receipt"
        tools:layout="@layout/fragment_receipt" />
    <fragment
        android:id="@+id/navigation_scanner"
        android:name="com.smartmart.scanner.MainActivity"
        android:label="@string/title_scanner"
        tools:layout="@layout/activity_main" />

</navigation>